@@ -1,6 +1,11 @@
 # ChangeLog for app-vim/reload
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-vim/reload/ChangeLog,v 1.1 2011/09/05 04:55:36 radhermit Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-vim/reload/ChangeLog,v 1.2 2012/08/03 22:01:29 radhermit Exp $
+
+*reload-0.6.8 (03 Aug 2012)
+
+  03 Aug 2012; Tim Harder <radhermit@gentoo.org> +reload-0.6.8.ebuild:
+  Version bump.
 
 *reload-0.6.4 (05 Sep 2011)
 
